# testrepository

./: .gitignore  .markdownlint.yml  .testr.conf  .travis.yml  404.html  COPYING  INSTALL.txt  Makefile  NEWS  README.md  README.rst  The Love-Letter Mystery  automated-test-isolation-bisection.html  configuration.html  forcing-isolation.html  grouping-tests.html  hiding-tests.html  index.html  listing-tests.html  overview.html  parallel-testing.html  print.html  pyproject.toml  remote-or-isolated-test-environments.html  repositories.html  requirements.txt  running-tests.html  searchindex.js  searchindex.json  setup.cfg  setup.py  setuptools-integration.html  test-requirements.txt  testr  toc.html  toc.js  tox.ini
.github/workflows/: docs.yml  publish-docs.yml  test.yml
design/: design.html
developers/: development-guidelines.html
doc/: DEVELOPERS.txt  MANUAL.txt  book.toml  conf.py
doc/src/: SUMMARY.md  automated-test-isolation-bisection.md  configuration.md  forcing-isolation.md  grouping-tests.md  hiding-tests.md  listing-tests.md  overview.md  parallel-testing.md  remote-or-isolated-test-environments.md  repositories.md  running-tests.md  setuptools-integration.md
doc/src/design/: design.md
doc/src/developers/: development-guidelines.md
testrepository/: __init__.py  _computecontext.py  results.py  setuptools_command.py  testcommand.py  testlist.py  utils.py
testrepository/arguments/: __init__.py  command.py  doubledash.py  path.py  string.py
testrepository/commands/: __init__.py  commands.py  failing.py  help.py  init.py  last.py  list_tests.py  load.py  quickstart.py  run.py  slowest.py  stats.py
testrepository/repository/: __init__.py  file.py  memory.py
testrepository/tests/: __init__.py  monkeypatch.py  stubpackage.py  test__compute_context.py  test_arguments.py  test_commands.py  test_matchers.py  test_monkeypatch.py  test_repository.py  test_results.py  test_setup.py  test_stubpackage.py  test_testcommand.py  test_testr.py  test_ui.py
testrepository/tests/arguments/: __init__.py  test_command.py  test_doubledash.py  test_path.py  test_string.py
testrepository/tests/commands/: __init__.py  test_commands.py  test_failing.py  test_help.py  test_init.py  test_last.py  test_list_tests.py  test_load.py  test_quickstart.py  test_run.py  test_slowest.py  test_stats.py
testrepository/tests/repository/: __init__.py  test_file.py
testrepository/tests/ui/: __init__.py  test_cli.py  test_decorator.py
testrepository/ui/: __init__.py  cli.py  decorator.py  model.py
tools/: README.md  run-container  start-container
