[build-system]
requires = ["setuptools>=61", "hatchling", "hatch_vcs"]
build-backend = "hatchling.build"

[project]
name = "testrepository"
description = "A repository of test results"
authors = [{name = "Robert Collins", email = "robertc@robertcollins.net"}]
license = {text = "Apachev2 or later or BSDv3"}
readme = "README.rst"
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
keywords = ["subunit", "unittest", "testrunner"]
dynamic = ["version"]
dependencies = [
    "iso8601",
    "python-subunit>=1.0.0",
    "fixtures",
]

[project.urls]
homepage = "https://launchpad.net/testrepository"
"Bug Tracker" = "https://bugs.launchpad.net/testrepository"
"CI" = "https://travis-ci.org/testing-cabal/testrepository"
"Source Repository" = "https://github.com/testing-cabal/testrepository"

[tool.setuptools]
license-files = ["COPYING"]

[project.optional-dependencies]
test = ["pytz", "testresources", "testscenarios"]
docs = ["sphinx"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "testrepository/_version.py"
tag-pattern = "^(?P<version>[0-9]+(\\.[0-9]+)*(-[0-9]+)?)(\\.post(?P<post>[0-9]+))?$"
template = """\
# This file is automatically generated by hatch.
version = {version!r}
__version__ = {version_tuple!r}
"""

[project.entry-points."distutils.commands"]
testr = "testrepository.setuptools_command:Testr"

[project.scripts]
testr = "testrepository.commands:main"

[tool.setuptools.packages.find]
exclude = ["man*"]


