[build-system]
build-backend = "hatchling.build"
requires = ["hatch_vcs", "hatchling", "setuptools>=61"]

[project]
authors = [{ name = "Robert Collins", email = "robertc@robertcollins.net" }]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = ["fixtures", "iso8601", "python-subunit>=1.0.0"]
description = "A repository of test results"
dynamic = ["version"]
keywords = ["subunit", "testrunner", "unittest"]
license = { text = "Apachev2 or later or BSDv3" }
name = "testrepository"
readme = "README.md"

[project.urls]
"Bug Tracker" = "https://bugs.launchpad.net/testrepository"
"CI" = "https://travis-ci.org/testing-cabal/testrepository"
"Source Repository" = "https://github.com/testing-cabal/testrepository"
homepage = "https://launchpad.net/testrepository"

[tool.setuptools]
license-files = ["COPYING"]

[project.optional-dependencies]
docs = ["sphinx"]
test = ["testresources", "testscenarios"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
tag-pattern = "^(?P<version>[0-9]+(\\.[0-9]+)*(-[0-9]+)?)(\\.post(?P<post>[0-9]+))?$"
template = """\
# This file is automatically generated by hatch.
version = {version!r}
__version__ = {version_tuple!r}
"""
version-file = "testrepository/_version.py"

[project.entry-points."distutils.commands"]
testr = "testrepository.setuptools_command:Testr"

[project.scripts]
testr = "testrepository.commands:main"

[tool.setuptools.packages.find]
exclude = ["man*"]
