[metadata]
name = testrepository
author = Robert Collins
author_email = robertc@robertcollins.net
home-page = https://launchpad.net/testrepository
summary = A repository of test results.
description-file = README.txt
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[files]
scripts =

[entry_points]
distutils.commands =
    testr = testrepository.setuptools_command:Testr

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
