[metadata]
name = testrepository
author = Robert Collins
author_email = robertc@robertcollins.net
home-page = https://launchpad.net/testrepository
summary = A repository of test results.
description-file = README.rst
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
keyword = subunit, unittest, testrunner
project_urls =
    Bug Tracker = https://bugs.launchpad.net/testrepository
    CI = https://travis-ci.org/testing-cabal/testrepository
    Source Repository = https://github.com/testing-cabal/testrepository

[extras]
test =
  pytz
  testresources
  testscenarios
docs =
  jinja2<2.7:python_version<"3.3" and python_version>="3"
  Pygments<2:python_version<"3.3" and python_version>="3"
  sphinx<1.3:python_version<"3.3" and python_version>="3"
  sphinx:python_version<"3" or python_version>="3.3"

[files]
scripts =

[entry_points]
distutils.commands =
    testr = testrepository.setuptools_command:Testr
console_scripts =
    testr = testrepository.commands:main

